# glbinding-meson

./: meson.build  meson_options.txt
source/: meson.build
source/glbinding/: meson.build
